[package]
name = "kodi-ftp-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
libunftp = "0.23"
unftp-core = "0.1"
suppaftp = { version = "5.3", features = ["async"] }
